force-app/main/default/objects/Maintenance_Log__c/Maintenance_Log__c.object-meta.xml
<CustomObject>
    <description>Maintenance info</description>
    <label>Maintenance Log</label>
    <nameField>
        <label>Maintenance Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>