force-app/main/default/objects/Maintenance_Log__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>