force-app/main/default/objects/Maintenance_Log__c/fields/Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Log_ID__c</fullName>
    <label>Log ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>