force-app/main/default/objects/Maintenance_Log__c/fields/Maintenance_Staff__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Staff</label>
    <referenceTo>Maintenance_Staff__c</referenceTo>
    <relationshipLabel>Maintenance Log</relationshipLabel>
    <relationshipName>Maintenance_Log</relationshipName>
    <type>Lookup</type>
</CustomField>