force-app/main/default/objects/Maintenance_Log__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Maintenance Log</relationshipLabel>
    <relationshipName>Maintenance_Log</relationshipName>
    <type>Lookup</type>
</CustomField>