force-app/main/default/objects/Maintenance_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Log_ID__c</columns>
    <columns>Equipment__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>